add text and media query

--- a/index.html
+++ b/index.html
@@ -56,18 +56,66 @@
     </div>
   </div>
     <div class="container">
+      <div>
       <img src="img/godzilla.jpg" alt="" />
+      <h3>Antonio Vivaldi: The Four Seasons Stuttgart Chamber Orchestra</h3>
+      <h3>600 x 600 &#8226; 191KB &#8226; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/2pac.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/2112.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/morphine.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/xtc.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/beatles.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/forro.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/metallica.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/mose.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/nas.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/vivaldi.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
+      <div>
       <img src="img/coltrane.jpg" alt="" />
+      <h3>Cimarosa's Oboe Concerto and Concerti by Albinoni, Marcello, Vivaldi</h3>
+      <h3>600 x 600 &#8226; 465KB &#8226; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686; &#10686;</h3>
+      </div>
     </div>
   </body>
 </html>
